# UAS_Praktik-Inversi

./: CMakeLists.txt  app.qrc
examples/: example_3D.txt
include/: CUDAInversionWrapper.h  CalculatingConditionWidget.h  ComputationEngine.h  DataInputWidget.h  GPUKernels.cuh  InversionMethods.h  MainWindow.h  MapViewer2D.h  MapViewer3D.h  MethodWidget.h  ResultWidget.h  SharedTypes.h  VelocityModelWidget.h
src/: CUDAInversionWrapper.cpp  CalculatingConditionWidget.cpp  ComputationEngine.cpp  DataInputWidget.cpp  GPUKernels.cu  GeneticAlgorithm.cpp  GlobalInversionMethods.cpp  LocalInversionMethods.cpp  MainWindow.cpp  MapViewer2D.cpp  MapViewer3D.cpp  MethodWidget.cpp  ResultWidget.cpp  VelocityModelWidget.cpp  main.cpp
src/cuda/: CUDACommon.cuh  CUDAUtils.cu  CauchySAKernel.cu  GridSearchKernel.cu  MetropolisSAKernel.cu  SPEA2Kernel.cu  SimpleSAKernel.cu  StandardGAKernel.cu  SteadyStateGAKernel.cu
